# pattern_recognition

./: Cargo.toml  LICENSE  README.md
src/: kernel.rs  main.rs
src/convert/: binarization.rs  brightness.rs  component_labeling.rs  contrast.rs  convolution.rs  detect_obejct_edge.rs  equalization.rs  gonzalez.rs  histogram.rs  inverse.rs  median.rs  mod.rs  save.rs  stretching.rs
src/model/: image.rs  mod.rs
