[package]
name = "pattern_recognition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Foundation"] }
bincode = "1.3.3"
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"]}
log = "0.4.20"
